<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gandhi Quotes</string>
    <string name="app_desc">Gandhi Quotes - Message of Peace and Non Violence</string>
    <string name="image_content_desc">Mohandas Karamchand Gandhi aka Mahatma Gandhi</string>
    <string name="gandhi_quotes">Gandhi Quotes</string>
    <string name="favorite_quotes">Favorite Quotes</string>
    <string name="teacher_quotes">Teachers Quotes</string>
    <string name="dussera_quotes">Dussera Quotes</string>
    <string name="celebrate_today">Quotes for Every Day</string>
    <string name="diwali_quotes">Diwali Quotes</string>
    <string name="other_apps">All Apps by CreativeI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Us</string>
    <string name="menu_music">Music</string>
    <string name="ad_unit_id">ca-app-pub-6639475559641591/2978945868</string>
    <string name="text_def_counter">1 of 200</string>
    <string name="text_def_quote">Quote</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="about_msg"><![CDATA[Gandhi Quotes App v1.0<br />Amiruddin Nagri<br /><br /><a href="http://www.creativev.co">http://www.creativev.co</a>]]></string>
    <string name="ok">OK</string>
    <string name="settings_screen_awake">Screen Awake</string>
    <string name="quote_favorited">Quote added to favorites</string>
    <string name="quote_unfavorited">Quote removed from favorites</string>
    <string name="no_quote">No Quotes to Display. Select other theme from drawer to view quotes.</string>
    <string name="instructions"><![CDATA[<b>Instructions</b><br/>
    1. Swipe Left/Right to navigate forward and backwards<br/>
    2. Use the Toolbar to Favorite and Share<br/>
    3. Control Music using Menu<br/>
    4. Navigate to Favorite Quotes using the Drawer (icon on top left corner)<br/>
    5. Go to other Quote Apps using the Drawer<br/>
    6. Prevent screen going to sleep using Menu<br/>
    7. Get instruction screen from Menu<br/><br/>
    <i>Please give feedback/rate us for improved apps</i>
        ]]></string>
    <string name="market_url">market://search?q=pub:creativev.co</string>
    <string-array name="other_apps">
        <item>co.creativev.quotes</item>
    </string-array>
</resources>
