<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_favorite"
        android:checkable="true"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_screen_awake"
        android:checkable="true"
        android:icon="@drawable/ic_screen_on"
        android:title="@string/settings_screen_awake"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_music"
        android:checkable="true"
        android:title="@string/menu_music"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_help"
        app:showAsAction="ifRoom" />
</menu>
