<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageAuthor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_content_desc"
        android:scaleType="fitStart" />

    <TextView
        android:id="@+id/textQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textCounter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#C0808080"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_def_quote"
        android:textColor="#FFDFDFDF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#C0808080"
        android:gravity="end"
        android:paddingRight="3dp"
        android:text="@string/text_def_counter"
        android:textAlignment="textEnd"
        android:textColor="#FFDFDFDF"
        android:textSize="14sp" />
</RelativeLayout>